form component upgrade (#908)

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/edit-image-dialog/edit-image-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/edit-image-dialog/edit-image-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="dialog-container">
   <h1 mat-mdc-dialog-title>Edit Image Title</h1>
   <div class="dialog-content" mat-dialog-content>
-    <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
+    <mat-form-field class="item-full-width" floatLabel="always">
       <mat-label class="label">Title</mat-label>
       <input matInput #input maxlength="150" type="text" placeholder="Title" [(ngModel)]="data.attachment.attachmentTitle" [value]="data.attachment.attachmentTitle" required>
       <mat-hint align="end">{{input.value?.length || 0}}/150</mat-hint>
