--- a/client/wfnews-war/src/main/angular/src/app/components/base/mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/base/mobile.component.scss
@@ -468,11 +468,11 @@ $list-item-width: 100%;
       flex: 1;
 
       .item-info{
-        .mat-list-item{
+        .mat-mdc-list-item{
           height: auto;
           padding: 10px 0 0 0;
           overflow: hidden;
-
+          /*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
           ::ng-deep .mat-list-item-content{
             padding: 0;
           }
@@ -480,11 +480,12 @@ $list-item-width: 100%;
       }
     }
   }
-
-  ::ng-deep .mat-list-base .mat-list-option.mat-list-option .mat-list-item-content-reverse .mat-list-text {
+  /*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
+  ::ng-deep .mat-mdc-list-base .mat-list-option.mat-list-option .mat-list-item-content-reverse .mat-list-text {
     flex-direction: unset !important;
   }
-
+  /*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
+  /*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
   mat-list,
   mat-selection-list {
     padding-top: 0;
@@ -506,7 +507,7 @@ $list-item-width: 100%;
       background-color: $colour-white;
       min-height: 64px;
       display: inline-grid;
-
+      /*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
       .mat-list-item-content {
         max-width: calc(var(--vw, 1vw) * 100);
 
