--- a/client/wfnews-war/src/main/angular/src/styles/_base.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/_base.scss
@@ -465,7 +465,7 @@ mat-toolbar.wf1-application-toolbar {
 //  }
 //}
 
-wf1-list-container mat-list.mat-list {
+wf1-list-container mat-list.mat-mdc-list {
     padding-top: 0;
     height: 100%;
     cdk-virtual-scroll-viewport {
@@ -480,7 +480,10 @@ wf1-list-container wf1-spinner {
     align-items: center;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
+/* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 mat-list-item.list-item {
+    /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
     .mat-list-item-content {
         align-items: center;
         padding: 0 !important;
