radio button and label upgrade (#917)

--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -651,6 +651,16 @@ wf-admin-incident-desktop{
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
 }
 
+.mdc-radio {
+  padding: 0 !important;
+}
+
+.mdc-form-field{
+  label{
+    font-family: "BCSans", "Noto Sans", Verdana, Arial, sans-serif !important;
+    padding-left: 8px !important;
+  }
+}
 
 .mdc-checkbox {
   .mdc-checkbox__checkmark-path {
