--- a/client/wfnews-war/src/main/angular/src/app/app.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.scss
@@ -145,14 +145,15 @@
       left: 1rem;
       font-size: x-small;
     }
-
+    /* TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version.*/
+    /* TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version.*/
     mat-radio-group,
     .checkbox-group {
       display: flex;
       flex-wrap: wrap;
       justify-content: flex-start;
       padding-bottom: .5rem;
-
+      /* TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version.*/
       mat-radio-button,
       mat-checkbox {
         box-sizing: border-box;
