--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -118,11 +118,11 @@
   background-color: rgba(244, 230, 195, 1);
   color: $colour-black;
   position: inherit;
-  .mat-simple-snackbar{
+  .mat-mdc-simple-snack-bar{
     font-family: $font-family-main;
     font-size: 13px;
   }
-  .mat-simple-snackbar-action{
+  .mat-mdc-snack-bar-action{
     color: #f1780e;
   }
 }
@@ -131,7 +131,7 @@
   background-color: #2e703e;
   color: $colour-white;
   position: inherit;
-  .mat-simple-snackbar{
+  .mat-mdc-simple-snack-bar{
     font-family: $font-family-main;
     font-size: 13px;
   }
@@ -146,7 +146,7 @@
   color: $colour-white;
   position: inherit;
   padding: 18px 16px!important;
-  .mat-simple-snackbar{
+  .mat-mdc-simple-snack-bar{
     font-family: $font-family-main;
     font-size: 13px;
   }
@@ -154,7 +154,7 @@
   .mat-button-wrapper{
     color:$colour-white;
   }
-  .mat-simple-snackbar-action{
+  .mat-mdc-snack-bar-action{
     border: 1px solid white;
     border-radius: 5px;
   }
@@ -183,7 +183,7 @@
   color: $colour-white;
   position: inherit;
   padding: 18px 16px!important;
-  .mat-simple-snackbar{
+  .mat-mdc-simple-snack-bar{
     font-family: $font-family-main;
     font-size: 13px;
   }
@@ -191,7 +191,7 @@
   .mat-button-wrapper{
     color:$colour-white;
   }
-  .mat-simple-snackbar-action{
+  .mat-mdc-snack-bar-action{
     border: 1px solid white;
     border-radius: 5px;
   }
@@ -226,7 +226,7 @@
   //  font-family: $font-family-main;
   //  font-size: 13px;
   //}
-  .mat-simple-snackbar-action{
+  .mat-mdc-snack-bar-action{
     color: #acdbac;
   }
 }
@@ -671,3 +671,19 @@ wf-admin-incident-desktop{
     border-radius: 5px !important;
   }
 }
+
+mat-snack-bar-container{
+  .mdc-snackbar__surface {
+    box-shadow: none !important;
+    background-color: inherit !important;
+    .mat-mdc-snack-bar-label{
+      font-size: 13px !important;
+      font-family: BCSans,Noto Sans,Verdana,Arial,"sans-serif" !important;
+      color: white !important;
+    }
+    .mdc-button__label {
+      color: white !important;
+    }
+  }
+}
+  // class="mat-mdc-snack-bar-label mdc-snackbar__label"
