--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/maps-panel/maps-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/maps-panel/maps-panel.component.scss
@@ -88,7 +88,7 @@ table tr:nth-child(even) td{
   border-bottom: 1px solid $colour-light-grey;
   overflow: auto;
 
-  .mat-table {
+  .mat-mdc-table {
     width: 100%;
     display: table;
 
@@ -456,9 +456,9 @@ table tr:nth-child(even) td{
   }
 }
 
-.mat-table {
+.mat-mdc-table {
 
-  .mat-header-cell {
+  .mat-mdc-header-cell {
     color: $colour-black;
     font-weight: $font-weight-emphasis;
     font-size: $font-size;
@@ -466,7 +466,7 @@ table tr:nth-child(even) td{
 
   }
 
-  .mat-cell {
+  .mat-mdc-cell {
     color: $colour-black;
     font-weight: $font-weight;
     font-size: $font-size;
@@ -489,15 +489,15 @@ table tr:nth-child(even) td{
     }
   }
 
-  .mat-row:nth-child(even) {
+  .mat-mdc-row:nth-child(even) {
     background-color: $colour-table-background-even;
   }
 
-  .mat-row:nth-child(odd) {
+  .mat-mdc-row:nth-child(odd) {
     background-color: $colour-table-background-odd;
   }
 
-  .mat-row{
+  .mat-mdc-row{
     &:hover{
       background-color: $colour-table-background-hover;
     }
