--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
@@ -16,7 +16,7 @@
   </div>
 </div>
 <!-- Main Body Content -->
-<mat-tab-group>
+<mat-tab-group mat-stretch-tabs="false">
   <mat-tab label="Incident Overview">
     <mat-accordion class="details" multi>
       <mat-expansion-panel #IncidentSummaryPanel class="incident-details-panel" expanded>
