--- a/client/wfnews-war/src/main/angular/src/app/components/common/base-collection/collection.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/common/base-collection/collection.component.scss
@@ -7,7 +7,7 @@
   border-bottom: 1px solid $colour-light-grey;
   overflow: auto;
 
-  .mat-table {
+  .mat-mdc-table {
     width: 100%;
     display: table;
 
@@ -377,7 +377,7 @@
   }
 }
 
-.mat-table {
+.mat-mdc-table {
 
   .mat-header-cell {
     color: $colour-black;
