--- a/client/wfnews-war/src/main/angular/src/styles/component/_side-panel.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/component/_side-panel.scss
@@ -57,7 +57,7 @@
     box-sizing: border-box;
     height: $wf1-toolbar-height;
 
-    .mat-tab-group .mat-tab-header {
+    .mat-mdc-tab-group .mat-mdc-tab-header {
       width: 100%;
     }
   }
