--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/maps-panel/maps-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/maps-panel/maps-panel.component.scss
@@ -88,7 +88,7 @@ table tr:nth-child(even) td{
   border-bottom: 1px solid $colour-light-grey;
   overflow: auto;
 
-  .mat-table {
+  .mat-mdc-table {
     width: 100%;
     display: table;
 
@@ -456,7 +456,7 @@ table tr:nth-child(even) td{
   }
 }
 
-.mat-table {
+.mat-mdc-table {
 
   .mat-header-cell {
     color: $colour-black;
