--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -249,17 +249,18 @@
 //}
 
 @media print {
-
+  /*TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
   mat-table,
   tr,
   mat-sidenav-content{
     width: 750px !important;
   }
+  /*TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
   mat-table{
     display: block;
   }
 
-  .mat-table .mat-cell,
+  .mat-mdc-table .mat-cell,
   .mat-table .mat-header-cell{
     padding: 0 !important;
   }
@@ -435,7 +436,7 @@
       }
     }
 
-    .mat-tab-body{
+    .mat-mdc-tab-body{
       .table-wrapper{
         margin: var(--wf1-gutter-space);
         width: calc(100% - 2*var(--wf1-gutter-space));
