--- a/client/wfnews-war/src/main/angular/ios/App/App/public/styles.css
+++ b/client/wfnews-war/src/main/angular/ios/App/App/public/styles.css
@@ -325,13 +325,14 @@
   font-size: 14px;
 }
 
-.mat-tooltip {
+.mat-mdc-tooltip {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 10px;
   padding-top: 6px;
   padding-bottom: 6px;
 }
 
+/*TODO(mdc-migration): The following rule targets internal classes of tooltip that may no longer apply for the MDC version.*/
 .mat-tooltip-handset {
   font-size: 14px;
   padding-top: 8px;
@@ -1449,7 +1450,7 @@ textarea.cdk-textarea-autosize-measuring-firefox {
   stroke: #c62828;
 }
 
-.mat-tooltip {
+.mat-mdc-tooltip {
   background: rgba(97, 97, 97, 0.9);
 }
 
