--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -260,8 +260,8 @@
     display: block;
   }
 
-  .mat-mdc-table .mat-cell,
-  .mat-table .mat-header-cell{
+  .mat-mdc-table .mat-mdc-cell,
+  .mat-table .mat-mdc-header-cell{
     padding: 0 !important;
   }
 
@@ -277,7 +277,7 @@
     display: none !important;
   }
 
-  #core-interface-container .mat-header-cell,
+  #core-interface-container .mat-mdc-header-cell,
   .review-item .mat-expansion-panel-content .fixed-table-layout td,
   mat-expansion-panel .review-item-header .review-item-status,
   mat-expansion-panel .review-item-header mat-panel-description.mat-expansion-panel-header-description{
