--- a/client/wfnews-war/src/main/angular/src/app/components/common/base-collection/collection.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/common/base-collection/collection.component.scss
@@ -379,7 +379,7 @@
 
 .mat-mdc-table {
 
-  .mat-header-cell {
+  .mat-mdc-header-cell {
     color: $colour-black;
     font-weight: $font-weight-emphasis;
     font-size: $font-size;
@@ -387,7 +387,7 @@
 
   }
 
-  .mat-cell {
+  .mat-mdc-cell {
     color: $colour-black;
     font-weight: $font-weight;
     font-size: $font-size;
@@ -410,15 +410,15 @@
     }
   }
 
-  .mat-row:nth-child(even) {
+  .mat-mdc-row:nth-child(even) {
     background-color: $colour-table-background-even;
   }
 
-  .mat-row:nth-child(odd) {
+  .mat-mdc-row:nth-child(odd) {
     background-color: $colour-table-background-odd;
   }
 
-  .mat-row{
+  .mat-mdc-row{
     &:hover{
       background-color: $colour-table-background-hover;
     }
