--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.scss
@@ -11,7 +11,7 @@
   background: #AA1D3E;
   color: white;
   border-radius: 50%;
-  margin-right: 8px;
+  margin-left: 8px;
   transform: scale(0.75);
   position: absolute;
   top: -3px;
