--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/contact-page/rof-contact-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/contact-page/rof-contact-page.component.scss
@@ -11,6 +11,7 @@
   border-radius: 7px;
 }
 
-::ng-deep.mat-form-field-wrapper {
+::ng-deep.mat-mdc-text-field-wrapper
+ {
   margin: 0px !important;
 }
