--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/maps-panel/maps-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/maps-panel/maps-panel.component.scss
@@ -335,8 +335,7 @@ table tr:nth-child(even) td{
           &:not(:first-of-type) {
             margin-left: 5px;
           }
-          /*TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version.*/
-          .mat-radio-outer-circle {
+          .mdc-radio__outer-circle {
             background-color: $colour-white;
           }
         }
