--- a/client/wfnews-war/src/main/angular/src/app/components/common/base-collection/collection.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/common/base-collection/collection.component.scss
@@ -256,8 +256,7 @@
           &:not(:first-of-type) {
             margin-left: 5px;
           }
-          /*TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version.*/
-          .mat-radio-outer-circle {
+          .mdc-radio__outer-circle {
             background-color: $colour-white;
           }
         }
