--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
@@ -14,12 +14,10 @@
     width: 100% !important;
     height: auto !important;
   }
-  /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
-  ::ng-deep .mat-tab-body-content {
+  ::ng-deep .mat-mdc-tab-body-content {
     height: auto !important;
     overflow: hidden !important;
   }
-  /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
   ::ng-deep .mat-mdc-tab-body.mat-tab-body-active {
     overflow-x: hidden !important;
     overflow-y: hidden !important;
@@ -55,8 +53,7 @@
   padding-bottom: 60px;
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
-:host ::ng-deep .mat-tab-label {
+:host ::ng-deep .mat-mdc-tab {
   color: #003366;
   @media (max-width: 768px) {
     color: #242424 !important;
@@ -71,8 +68,7 @@
   }
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
-:host ::ng-deep .mat-tab-label-active {
+:host ::ng-deep .mdc-tab--active {
   font-weight: 700 !important
 }
 
