--- a/client/wfnews-war/src/main/angular/src/styles/component/_filters.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/component/_filters.scss
@@ -1,12 +1,10 @@
 @import '../variables';
 
 .wf1-filters {
-  /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
-  .mat-tab-label.mat-tab-label-active {
+  .mat-mdc-tab.mdc-tab--active {
     background-color: $opacity-grey;
   }
-  /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
-  mat-tab-body .mat-tab-body-content.slidedown {
+  mat-tab-body .mat-mdc-tab-body-content.slidedown {
       max-height: unset!important;
       overflow-y: auto!important;
   }
@@ -63,14 +61,12 @@
     }
 
     &--hidden {
-      /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
       .mat-mdc-tab-body,
-      .mat-tab-body-wrapper {
+      .mat-mdc-tab-body-wrapper {
         display: none;
       }
     }
-    /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
-    .mat-tab-label {
+    .mat-mdc-tab {
       box-sizing: border-box;
       padding: 0;
       min-width: 1rem;
@@ -81,8 +77,7 @@
         width: 100%;
       }
     }
-    /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
-    .mat-tab-label:hover {
+    .mat-mdc-tab:hover {
       background-color: $colour-toolbar-grey;
     }
   }
